k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: food-order-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: food-order
          image: guuhworship/food_order:v1
          ports:
            - containerPort: 4000
