k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: food-order-pod
  labels:
    component: web
spec:
  containers:
    - name: food-order
      image: guuhworship/food_order:v1
      ports:
        - containerPort: 4000
