k8s/node-port.yml
apiVersion: v1
kind: Service
metadata: 
  name: food-order-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 4000
      targetPort: 4000
