k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: postgres-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 4000
      targetPort: 4000
